--- a/service-config/Dockerfile
+++ b/service-config/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk
 MAINTAINER Hakim Arhazzal <hakim.arhazzal@gmail.com>
-ADD target/service-config.jar service-config.jar
+ADD target/service-config-0.0.1-SNAPSHOT.jar service-config.jar
 ENTRYPOINT ["java", "-jar", "/service-company.jar"]
 EXPOSE 3333
