--- a/service-config/Dockerfile
+++ b/service-config/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk
 MAINTAINER Hakim Arhazzal <hakim.arhazzal@gmail.com>
-ADD build/libs/target/service-config-0.0.1-SNAPSHOT.jar service-config-0.0.1-SNAPSHOT.jar.jar
+ADD target/service-config-0.0.1-SNAPSHOT.jar service-config-0.0.1-SNAPSHOT.jar.jar
 ENTRYPOINT ["java", "-jar", "/service-config-0.0.1-SNAPSHOT.jar"]
 EXPOSE 3333
